[package]
name = "dusk-blindbid"
version = "0.7.0"
authors = ["CPerezz <carlos@dusk.network>", "Victor Lopez <victor@dusk.network>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/dusk-network/dusk-blindbid"
categories =["algorithms", "cryptography", "science"]
keywords = ["blindbid", "plonk", "lottery", "zero-knowledge", "crypto"]
description = "BlindBid protocol implementation with PLONK ZKProofs backend"
exclude = [
    ".gitignore",
    "Cargo.lock",
    ".github/",
    "README.md",
    "CONTRIBUTING.md",
]

[dependencies]
dusk-pki = {version = "0.6", tag = "v0.6.0", default-features = false}
dusk-poseidon = {version = "0.18", default-features = false }
dusk-bls12_381 = {version = "0.6", default-features = false}
dusk-jubjub = {version = "0.8", default-features = false}
dusk-plonk = {version = "0.5", features = ["trace-print"], optional = true}
num-bigint = {version = "0.3", optional = true } 
num-traits = {version = "0.2", optional = true } 
plonk_gadgets = {version = "0.5", optional = true}
rand_core = {version = "0.5", default-features = false}  
lazy_static = "1"
rand = {version = "0.7", default-features = false, optional = true }
canonical = { version = "0.5", optional = true }
canonical_derive = { version = "0.5", optional = true }
anyhow = {version = "1", optional = true}
dusk-bytes = "0.1"
cfg-if = "1.0"

[dev-dependencies]
canonical_host = "0.5"

[features]
default = ["std", "canon"]
std = [
    "anyhow",
    "dusk-jubjub/std",
    "dusk-bls12_381/std",
    "dusk-plonk",
    "dusk-poseidon/default",
    "plonk_gadgets",
    "num-bigint",
    "num-traits",
    "rand/default",
    "rand_core/std",
]
canon = [
    "canonical",
    "canonical_derive",
    "dusk-poseidon/canon",
    "dusk-pki/canon",
]
