[package]
name = "dusk-blindbid"
version = "0.8.0"
authors = ["CPerezz <carlos@dusk.network>", "Victor Lopez <victor@dusk.network>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/dusk-network/dusk-blindbid"
categories =["algorithms", "cryptography", "science"]
keywords = ["blindbid", "plonk", "lottery", "zero-knowledge", "crypto"]
description = "BlindBid protocol implementation with PLONK ZKProofs backend"
exclude = [
    ".gitignore",
    "Cargo.lock",
    ".github/",
    "README.md",
    "CONTRIBUTING.md",
]

[dependencies]
dusk-pki = { version = "0.7", default-features = false }
dusk-poseidon = { version = "0.21", default-features = false }
dusk-bls12_381 = { version = "0.8", default-features = false }
dusk-jubjub = { version = "0.10", default-features = false }
num-bigint = { version = "0.3", optional = true } 
num-traits = { version = "0.2", optional = true }
rand_core = { version = "0.6", default-features = false }
canonical = { version = "0.6", optional = true }
canonical_derive = { version = "0.6", optional = true }
dusk-bytes = "0.1"

[dev-dependencies]
rand = "0.8"

[features]
default = ["canon", "std"]
std = [
    "dusk-jubjub/std",
    "dusk-bls12_381/std",
    "dusk-poseidon/default",
    "num-bigint",
    "num-traits",
]
canon = [
    "canonical",
    "canonical_derive",
    "dusk-poseidon/canon",
    "dusk-pki/canon",
]

